Fix missing margins for generated icon elements
The margin on the left and right of `<fa>` elements is missing. This
commit makes a simple change to the CSS to add it manually.

--- a/src/css/control.css
+++ b/src/css/control.css
@@ -120,6 +120,11 @@ input[type="file"] {
     margin-top: 8px;
 }
 
+.fa[name] {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 /* Alert icons */
 .alert-icon-error:before, .alert-icon-warning:before {
     content: "\f071";
